# phoenix

./: .gitignore  README.md
benchmarks/kvcache/: kvcache_reader.hh
benchmarks/safetensor/: safetensors.hh
docs/: README.md  libphoenix.md  phoenix-fs.md
example/: CMakeLists.txt  example.cc  hnsw_vector_search.cu
libphoenix/: phoenix.cc
module/: .gitignore  configure
scripts/: addr_traddr  micro.py  nfs.sh  nvme_of.sh
